# litexml

./: .gitignore  CMakeLists.txt  README.md  TODO  dom_node.h  entity_table.h  litexml-config-version.cmake.in  litexml-config.cmake.in  litexml.h  litexml_export.h.in  litexml_stream.h  test.cpp  xml_parser.cpp  xml_parser.h  xml_serializer.h  xml_stream.hpp
